<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_20dp" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/coroutine_introduction"
            android:theme="@style/titleTheme"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/coroutine_introduction_desc"
            android:theme="@style/titleDescTheme"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/txtTitle" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_15dp"
            android:alpha="0.5"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/txtDesc" />

        <TextView
            android:id="@+id/txtLaunchAsync"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/launch_vs_async"
            android:textStyle="bold"
            android:theme="@style/titleDescTheme"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/txtLaunch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/launch_async_desc"
            android:theme="@style/titleDescTheme"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/txtLaunchAsync" />


        <Button
            android:id="@+id/btnFbLaunch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/fb_followers_launch"
            android:textAllCaps="false"
            android:theme="@style/titleDescTheme"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/txtLaunch" />

        <Button
            android:id="@+id/btnFbAsync"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/fb_followers_async"
            android:textAllCaps="false"
            android:theme="@style/titleDescTheme"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/btnFbLaunch" />

        <Button
            android:id="@+id/btnParallelExecution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/get_fb_insta_followers"
            android:textAllCaps="false"
            android:theme="@style/titleDescTheme"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/btnFbAsync" />

        <TextView
            android:id="@+id/txtJobCancellation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/jobs_amp_cancellations"
            android:textStyle="bold"
            android:theme="@style/titleDescTheme"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/btnParallelExecution" />

        <Button
            android:id="@+id/btnJob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/understand_job_hierachy"
            android:textAllCaps="false"
            android:theme="@style/titleDescTheme"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/txtJobCancellation" />

        <TextView
            android:id="@+id/txtViewModelLifeCycle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/lifecycle_scope_and_viewmodel_scope"
            android:textStyle="bold"
            android:theme="@style/titleDescTheme"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/btnJob" />

        <Button
            android:id="@+id/btnLifeCycleViewModel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/create_coroutine_for_viewmodel_scope"
            android:textAllCaps="false"
            android:theme="@style/titleDescTheme"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/txtViewModelLifeCycle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>