<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_20dp" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/thread_introduction"
            android:theme="@style/titleTheme"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_logs_for_monitoring"
            android:theme="@style/titleDescTheme"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/txtTitle" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_15dp"
            android:alpha="0.5"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/txtDesc" />

        <TextView
            android:id="@+id/txtCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="@dimen/_40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <Button
            android:id="@+id/updateCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_counter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtCounter" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_15dp"
            android:alpha="0.5"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/updateCounter" />

        <TextView
            android:id="@+id/lblThread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center"
            android:text="@string/need_of_thread"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <Button
            android:id="@+id/btnExecuteTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/execute_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblThread" />

        <TextView
            android:id="@+id/lblUseThread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center"
            android:text="@string/use_of_thread"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnExecuteTask" />

        <Button
            android:id="@+id/btnExecuteTaskThread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/execute_task_thread"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblUseThread" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>